2002-08-14  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_listnum.c (bk_listnum_next): New flag parameter:
	BK_LISTNUM_PRUNE_EMPTY to prune lists with no elements in them.
	Significant time savings for scan detection.

2002-08-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (FLAG_BEGIN, FLAG_END): use [], not <>, for XML compat
	(bk_encode_base64): don't read past end of buffer when len==1

2002-08-14  James Tanis  <jtt@saint.sysdetect.com>

	* include/libbk.h (BK_ENTRY): Do not call bk_fun stuff if !B.
	(BK_ENTRY_MAIN): Special BK_ENTRY for main() (ie when B == NULL,
	but you still want bk_fun stuff).
	(BK_RETURN): (and pals) Do not do anything if B == NULL.

2002-08-09  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h: bk_ioh_printf takes const char *format

2002-08-12  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_netutils.c (bk_inet_ntoa): "Thread safe" version of
	inet_ntoa(). 

2002-08-05  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_url.c (bk_url_parse): break out host/service from authority
	even if BK_URL_FLAG_STRICT_PARSE is specified.
	
2002-07-24  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_flagtoa, bk_string_atoflag): avoid using
	'=' [looks like parameter assignment]; use traditional <> delimiters
	(bk_string_atoflag): more aggressive error checking
	(bk_strnstr, bk_strstrn): fix fencepost error in non-MEMMEM code

2002-07-23  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_atod): assign value when parsing zero val

	* include/libbk_oscompat.h (UINT64_MAX): portability

	* lib/b_string.c (bk_string_flagtoa, bk_string_atoflag): revised to
	support symbolic flag i/o with kernel %b / printb style flag names
	(bk_string_atoull_int, bk_sting_ato[ui], bk_sting_ato[ui]ll): better
	error checking, including: overflow, garbage with no digits, negative
	signs in unsigned parse; correct handling of INT_MIN, LLONG_MIN
	(NAN, INFINITY): portability
