@@ -1,3 +1,7 @@
+2002-08-19  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_string.c (bk_bufhash): hash for vptr
+
 2002-08-14  Seth Robertson  <seth@startide.sysdetect.com>
 
 	* lib/b_listnum.c (bk_listnum_next): New flag parameter:
